--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/ui": "^0.7.2",
+    "history": "^5.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-router-dom": "^5.2.0"
+    "react-router": "^6.0.0-beta.0",
+    "react-router-dom": "^6.0.0-beta.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.1.7",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.5",
